--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,7 +59,7 @@ play.modules {
   # explicitly below.
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
-
+  enabled += "play.filters.csrf.CSRFModule"
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
 }
@@ -255,7 +255,28 @@ play.filters {
     #cookie.secure = true
 
     # Defaults to CSRFErrorHandler in the root package.
-    #errorHandler = MyCSRFErrorHandler
+    errorHandler = controllers.CSRFFilterError
+
+    # Header configuration
+    header {
+      name = "X-XSRF-TOKEN"
+    }
+
+    # Cookie configuration
+    cookie {
+      name = "XSRF-TOKEN"
+    }
+
+
+    # Method lists
+    method {
+      # If non empty, then requests will be checked if the method is not in this list.
+      whiteList = ["HEAD", "OPTIONS"]
+
+      # The black list is only used if the white list is empty.
+      # Only check methods in this list.
+      blackList = []
+    }
   }
 
   ## Security headers filter configuration
